<resources>
    <string name="app_name">College Database</string>
    <string name="cho">Choose Class</string>
    <string name="add">Add a Class</string>
    <string name="del">Delete a Class</string>
    <string name="mod">Modify a Class</string>
    <string name="cid">Enter Class ID</string>
    <string name="clname">Enter Class Name</string>
    <string name="maxstu">Enter Max Students</string>
    <string name="logid">Enter Login ID</string>
    <string name="logpass">Enter Password</string>
    <string name="sub">Submit</string>
    <string name="adm">Administrator</string>
    <string name="gue">Student</string>
    <string name="nullre">Empty Database</string>
    <string name="modbut">Modify</string>
    <string name="ad">Add</string>
    <string name="sid">Enter Student ID</string>
    <string name="sname">Enter Student Name</string>
    <string name="teach">Teacher</string>
    <string name="title_activity_class">ClassActivity</string>
    <string name="teacher">Teacher</string>
    <string name="clas">Class</string>
    <string name="subject">Subject</string>
    <string name="subid">Enter Subject ID</string>
    <string name="subname">Enter Subject Name</string>
    <string name="tid">Enter Teacher ID</string>
    <string name="tname">Enter Teacher Name</string>
    <string name="tpass">Enter Password</string>
    <string name="dob">Enter Date of Birth</string>
    <string name="email">Enter Email ID</string>
    <string name="address">Enter Address</string>
    <string name="contact_num">Enter Contact No.</string>
    <string name="name_father">Enter Father\'s Name</string>
    <string name="contact_father">Enter Father\'s Contact No.</string>
    <string name="map">Map</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="conpass">Confirm Password</string>
</resources>
