<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AddTeacher">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="ADD TEACHER"
                android:textSize="26sp"
                android:fontFamily="@font/bold"
                android:textColor="@color/colorAccent">
            </TextView>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/teacher_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/noimg" />

    <EditText
        android:id="@+id/tname"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tname"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/teacher_gender"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/teacher_male"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Male" />

        <RadioButton
            android:id="@+id/teacher_female"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>

    <EditText
        android:id="@+id/teacher_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/teacher_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/teacher_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/teacher_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contact_num"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tpass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackgroundLight"
        android:layout_gravity="center"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="button"
        android:text="@string/sub" />
</LinearLayout>
