<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddClass">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="ADD STUDENT"
                android:textSize="26sp"
                android:fontFamily="@font/bold"
                android:textColor="@color/colorAccent">
            </TextView>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/photo_student"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/noimg" />

            <EditText
                android:id="@+id/sname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sname"
                android:inputType="textPersonName" />
            <EditText
                android:id="@+id/spass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Password"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/gender_student"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Female" />
            </RadioGroup>

            <EditText
                android:id="@+id/no_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_num"
                android:inputType="number" />

            <EditText
                android:id="@+id/dob_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dob"
                android:inputType="date" />

            <EditText
                android:id="@+id/mail_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/address_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/address"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/name_father"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_father"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/no_father"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_father"
                android:inputType="number" />

            <Button
                android:id="@+id/button2"
                android:layout_width="350dp"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackgroundLight"
                android:layout_gravity="center"
                android:background="@drawable/button_bg_rounded_corners"
                android:onClick="button"
                android:text="@string/sub" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
