<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="WELCOME"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"></TextView>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="LOGIN AS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        android:fontFamily="@font/bold"/>

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/radio_bg"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioadmin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/adm"
            android:textColor="@color/colorBackgroundLight"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioguest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/gue"
            android:textColor="@color/colorBackgroundLight"
            android:textSize="15dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioteacher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/teach"
            android:textColor="@color/colorBackgroundLight"
            android:textSize="15dp"
            android:textStyle="bold" />

    </RadioGroup>

    <EditText
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/logid"
        android:inputType="number"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/logpass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="addListenerOnButton"
        android:text="proceed"
        android:textColor="@color/colorBackgroundLight" />

</LinearLayout>