<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ModifyActivity">
    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="60dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="MODIFY CLASS"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"></TextView>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/cnamemod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/clname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/maxstumod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/maxstu"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonmod"
        android:layout_marginTop="350dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBackgroundLight"
        android:layout_gravity="center"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="button"
        android:text="@string/modbut" />
</LinearLayout>
